Link front and backend
Let user click "add exercise" button which calls code for parsing json file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateRoutineActivity"></activity>
+        <activity android:name=".ExercisePopupActivity"></activity>
     </application>
 
 </manifest>
