Handle listview data
Handling data from exercises chosen and routine name and passing this onto new window

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".CreateRoutineActivity"></activity>
         <activity android:name=".ExercisePopupActivity"></activity>
+        <activity android:name=".DisplayRoutineActivity"></activity>
     </application>
 
 </manifest>
