--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ExercisePopupActivity"></activity>
         <activity android:name=".DisplayWorkoutActivity"></activity>
         <activity android:name=".DisplayRoutinesActivity"></activity>
+        <activity android:name=".TrackProgressActivity"></activity>
     </application>
 
 </manifest>
